data/gnupg-users/sonic_dersonic_org.txt

@_date: 2013-05-11 20:05:43
@_author: Michael 
@_subject: gnupg 2.0.20 on osx 
i tried to compile the new version (2.0.20) on osx with 10.8.3 and xcode 4.6.2.
I get a lot of errors from from the pcsc-wrapper:
csc-wrapper.c:69: error: expected '=', ',', ';', 'asm' or
'__attribute__' before 'int'
pcsc-wrapper.c:129: error: expected specifier-qualifier-list before
pcsc-wrapper.c:149: error: expected '=', ',', ';', 'asm' or
'__attribute__' before 'pcsc_protocol'
pcsc-wrapper.c:153: error: expected ')' before 'scope'
pcsc-wrapper.c:160: error: expected declaration specifiers or '...'
before 'pcsc_dword_t'
pcsc-wrapper.c:162: error: expected declaration specifiers or '...'
before 'pcsc_dword_t'
pcsc-wrapper.c:164: error: expected declaration specifiers or '...'
before 'pcsc_dword_t'
pcsc-wrapper.c:167: error: expected declaration specifiers or '...'
before 'pcsc_dword_t'
pcsc-wrapper.c:168: error: expected declaration specifiers or '...'
before 'pcsc_dword_t'
any suggestions?

@_date: 2013-10-05 14:58:27
@_author: Michael 
@_subject: GnuPG 2.0.22 compiling on Mac OS X fails 
i just tried to compile the 2.0.22 version on Mac OS X 10.8.5 with XCode 5.0.
But it fails :
 weak pth_waitpid
             ^
exechelp.c:68:14: warning: weak identifier 'pth_fork' never declared
 weak pth_fork
             ^
signal.c:125:41: warning: adding 'int' to a string does not append to the string
      [-Wstring-plus-int]
                  write (2, "0123456789"+(value/i), 1);
                            ~~~~~~~~~~~~^~~~~~~~~~
signal.c:125:41: note: use array indexing to silence this warning
                  write (2, "0123456789"+(value/i), 1);
                                        ^
                            &           [         ]
       with absolute path
    defined(__has_include_next) && __has_include_next()
                                   ^
       with absolute path
# include_next   ^
In file included from estream-printf.c:54:
In file included from ../gl/stdint.h:66:
  extern intmax_t imaxabs(intmax_t j);
         ^
  extern intmax_t imaxabs(intmax_t j);
                          ^
        intmax_t quot;
        ^
        intmax_t rem;
        ^
  extern imaxdiv_t imaxdiv(intmax_t numer, intmax_t denom);
                           ^
  extern imaxdiv_t imaxdiv(intmax_t numer, intmax_t denom);
                                           ^
  extern intmax_t strtoimax(const char * restrict nptr, char ** restric...
         ^
      mean 'uintptr_t'?
  extern uintmax_t strtoumax(const char * restrict nptr, char ** restric...
         ^
typedef unsigned long           uintptr_t;
                                ^
In file included from estream-printf.c:54:
In file included from ../gl/stdint.h:66:
  extern intmax_t wcstoimax(const wchar_t * restrict nptr, wchar_t ** re...
         ^
      mean 'uintptr_t'?
  extern uintmax_t wcstoumax(const wchar_t * restrict nptr, wchar_t ** r...
         ^
typedef unsigned long           uintptr_t;
                                ^
Best regards,

@_date: 2013-10-06 16:38:13
@_author: Michael 
@_subject: GnuPG 2.0.22 compiling on Mac OS X fails 
Am 05.10.2013 um 17:08 schrieb Werner Koch :
I tryed the workaround described in the bug report.
But i use gl/stdint.h instead of sm/stdint.h.
The workaround works well so far.
# include "///Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../lib/clang/5.0/include/stdint.h"
typedef long  			intptr_t;
typedef long long               intmax_t;
typedef unsigned long   	uintptr_t;
typedef unsigned long long      uintmax_t;
